# EmmyLua-LanguageServer2

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Compilation/: CMakeLists.txt  Compilation.cpp  Compilation.h
Core/Compilation/SemanticModel/: SemanticModel.cpp  SemanticModel.h
Core/Compilation/Symbol/: Scope.h  SymbolAnalyze.cpp  SymbolAnalyze.h  SymbolAnalyzer.cpp  SymbolAnalyzer.h  SymbolTable.cpp  SymbolTable.h  Symbols.cpp  Symbols.h
Core/Lib/: CMakeLists.txt
Core/Lib/LSP/: LSP.cpp  LSP.h
Core/Lib/LineIndex/: LineIndex.cpp  LineIndex.h  LineTypes.cpp  LineTypes.h
Core/Lib/TextRange/: TextRange.cpp
Core/Lua/: CMakeLists.txt
Core/Lua/Define/: LuaOperatorType.cpp  LuaOperatorType.h  LuaSyntaxError.h  LuaToken.h
Core/Lua/DocLexer/: LuaDocLexer.cpp  LuaDocLexer.h
Core/Lua/DocParser/: LuaDocParser.cpp  LuaDocParser.h
Core/Lua/Kind/: LuaSyntaxMultiKind.cpp  LuaSyntaxMultiKind.h  LuaSyntaxNodeKind.h  LuaTokenKind.h
Core/Lua/LuaLexer/: LuaLexer.cpp  LuaLexer.h
Core/Lua/LuaParser/: LuaParser.cpp  LuaParser.h
Core/Lua/ParseState/: Mark.cpp  Mark.h  ParseState.h
Core/Lua/Source/: LuaSource.cpp  LuaSource.h  SourceUpdateEvent.cpp  SourceUpdateEvent.h
Core/Lua/SyntaxNode/: BaseSyntax.cpp  BaseSyntax.h  LuaSyntaxNode.cpp  LuaSyntaxNode.h  LuaSyntaxToken.cpp  LuaSyntaxToken.h
Core/Lua/SyntaxNode/Doc/: ArrayTypeSyntax.cpp  ArrayTypeSyntax.h  CommentSyntax.cpp  CommentSyntax.h  DocAccessSyntax.cpp  DocAccessSyntax.h  DocAliasSyntax.cpp  DocAliasSyntax.h  DocBaseSyntax.cpp  DocBaseSyntax.h  DocClassSyntax.cpp  DocClassSyntax.h  DocDeprecatedSyntax.h  DocEnumSyntax.cpp  DocEnumSyntax.h  DocFieldSyntax.cpp  DocFieldSyntax.h  DocGenericSyntax.cpp  DocGenericSyntax.h  (+45 more)
Core/Lua/SyntaxTree/: InnerNodeOrToken.h  InternalNodeOrToken.h  LuaDocTreeBuilder.cpp  LuaDocTreeBuilder.h  LuaNodeOrToken.cpp  LuaNodeOrToken.h  LuaSyntaxTree.cpp  LuaSyntaxTree.h  LuaTreeBuilder.cpp  LuaTreeBuilder.h  TreeUpdateEvent.cpp  TreeUpdateEvent.h
Core/Lua/Util/: TextReader.cpp
Core/LuaParser/: CMakeLists.txt
Core/LuaParser/Ast/: LuaDocTreeBuilder.h  LuaSyntaxMultiKind.h  LuaSyntaxNode.cpp  LuaSyntaxNode.h  LuaSyntaxNodeKind.cpp  LuaSyntaxNodeKind.h  LuaSyntaxTree.cpp  LuaSyntaxTree.h  LuaTreeBuilder.cpp  LuaTreeBuilder.h  NodeOrToken.h
Core/LuaParser/Define/: AccessVisibility.h  LuaSyntaxError.h  LuaToken.h  LuaTokenKind.h  LuaTokenTypeDetail.h
Core/LuaParser/DocLexer/: LuaDocLexer.cpp  LuaDocLexer.h
Core/LuaParser/DocParser/: LuaDocParser.cpp  LuaDocParser.h
Core/LuaParser/File/: LuaFile.cpp  LuaFile.h
Core/LuaParser/Kind/: LuaSyntaxNodeKind.h  LuaTokenKind.h
Core/LuaParser/Lexer/: LuaIdentify.cpp  LuaLexer.cpp  LuaLexer.h  TextReader.cpp
Core/LuaParser/Parse/: LuaParseError.h  LuaParser.cpp  LuaParser.h  Mark.cpp  Mark.h
Core/LuaParser/ParseState/: Mark.cpp  Mark.h  ParseState.cpp  ParseState.h
Core/LuaParser/Parser/: LuaOperatorType.h  LuaParser.cpp  LuaParser.h  Mark.h
Core/LuaParser/Psi/: PsiCaster.h  PsiElement.cpp  PsiElement.h  PsiType.h
Core/LuaParser/Source/: LuaSource.cpp  LuaSource.h
Core/LuaParser/SyntaxNode/: BaseSyntax.cpp  BaseSyntax.h  LuaSyntaxNode.cpp  LuaSyntaxNode.h  SyntaxBodyNode.cpp  SyntaxBodyNode.h
Core/LuaParser/SyntaxTree/: LuaDocTreeBuilder.cpp  LuaDocTreeBuilder.h  LuaSyntaxMultiKind.cpp  LuaSyntaxMultiKind.h  LuaSyntaxTree.cpp  LuaSyntaxTree.h  LuaTreeBuilder.cpp  LuaTreeBuilder.h  NodeOrToken.h
Core/LuaParser/Types/: TextRange.cpp  TextRange.h
Core/LuaParser/Util/: Mark.cpp  Mark.h  TextReader.cpp  TextReader.h
Core/Workspace/: CMakeLists.txt  LuaWorkspace.cpp  LuaWorkspace.h
Core/Workspace/Document/: LuaDocument.cpp  LuaDocument.h
LanguageServer/: CMakeLists.txt  LanguageServer.cpp  LanguageServer.h
LanguageServer/Config/: ClientConfig.h
LanguageServer/DB/: FileDB.cpp  FileDB.h  LineIndexDB.h
LanguageServer/LSPHandle/: LSPHandle.cpp  LSPHandle.h
LanguageServer/Service/: CodeActionService.cpp  CodeActionService.h  CommandService.cpp  CommandService.h  ConfigService.cpp  ConfigService.h  DiagnosticService.cpp  DiagnosticService.h  Service.h  ServiceType.h  VirtualFileSystem.cpp  VirtualFileSystem.h
LanguageServer/Session/: IOSession.cpp
LanguageServer/Session/Protocol/: ProtocolBuffer.cpp  ProtocolParser.cpp  ProtocolParser.h
LanguageServer/VFS/: VirtualFile.cpp  VirtualFile.h  VirtualFileSystem.cpp  VirtualFileSystem.h
Util/: CMakeLists.txt  CommandLine.cpp  FileFinder.cpp  StringUtil.cpp  Url.cpp
Util/CommandLine/: CommandLine.cpp  CommandLine.h
Util/File/: FileFinder.cpp
Util/String/: StringUtil.h  Utf8.cpp
(+245 files in other folders)
